--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js Restful CRUD API with Node.js, Express and MongoDB",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "nodejs",
@@ -13,11 +14,17 @@
     "api",
     "mongodb"
   ],
-  "author": "bezkoder",
+  "author": "Anonymous",
   "license": "ISC",
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^6.11.1"
+    "jsonwebtoken": "^9.0.2",
+    "jwk-to-pem": "^2.0.5",
+    "mongoose": "^6.11.1",
+    "request": "^2.88.2"
   }
 }
