--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node server.js"
+    "start": "nodemon local.js"
   },
   "keywords": [
     "nodejs",
@@ -18,6 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "amazon-cognito-identity-js": "^6.3.7",
+    "aws-sdk": "^2.1507.0",
+    "aws-serverless-express": "^3.4.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -25,6 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwk-to-pem": "^2.0.5",
     "mongoose": "^6.11.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "request": "^2.88.2"
   }
 }
